Fixed an issue on iOS 7 devices that were incorrectly rendering `vh` units

--- a/app/assets/stylesheets/showcase.scss
+++ b/app/assets/stylesheets/showcase.scss
@@ -1,11 +1,11 @@
 .full-height {
   // 90 is intentional as it shows a portion of the next "slide" underneath
   // the main title
-  min-height: 90vh;
+  min-height: 450px;
 }
 
 .header-bottom {
-  padding-top: 60vh;
+  padding-top: 300px;
 }
 
 .align-right {
@@ -19,11 +19,11 @@
 
 .header-middle-lead {
   text-align: center;
-  padding-top: 25vh;
+  padding-top: 125px;
 }
 
 .header-middle {
-  padding-top: 5vh;
+  padding-top: 25px;
   text-align: center;
 }
 
